[package]
name = "rivia-edit"
version = "0.0.1"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Orchestration for editing files in a repeatable way"
repository = "https://github.com/phR0ze/rivia-edit"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

[dependencies]
tracing = "0.1"
rivia-vfs = "0.1"
