[package]
name = "rivia-file"
version = "0.0.5"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Orchestration for manipulation of file content"
repository = "https://github.com/phR0ze/rivia-file"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

[dependencies]
regex = "1.5"
rivia-vfs = "0.2.3"