[package]
name = "rivia-file"
version = "0.0.9"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Orchestration for manipulation of file content"
repository = "https://github.com/phR0ze/rivia-file"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = false   # Provide debug symbols for Witcher
strip = true    # Remove all extra info

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
regex = "1.5"
rivia-vfs = "0.2.4"